[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scenes/Cinematics/cinematica_final_sueno.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://Assets_Secenes/Cinematic/4-sleeping.png" id="2_sleeping"]

[node name="CinematicaFinalSueno" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("1_script")

[node name="FondoOscuro" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 0.85)

[node name="ImagenSleeping" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -280.0
offset_right = 400.0
offset_bottom = 120.0
stretch_mode = 6
texture = ExtResource("2_sleeping")

[node name="PanelTexto" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -220.0
offset_right = -60.0
offset_bottom = -60.0

[node name="MarginContainer" type="MarginContainer" parent="PanelTexto"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="LabelTexto" type="Label" parent="PanelTexto/MarginContainer"]
layout_mode = 2
text = "Estás despertando del sueño..."
autowrap_mode = 2

